# sentinel

./: .gitignore  Cargo.toml  README.md  TODO.md  configure  meson.build  org.gnome.Sentinel.json
data/ui/: headerbar.ui  interface.ui  main.ui  preferences.ui  trending_view.ui  video.ui  video_player.ui  widgets.ui
scripts/: cargo.sh  compile-gschema.py  release.sh
sentinel-api/: Cargo.toml
sentinel-api/src/: lib.rs  utils.rs
sentinel-gtk/: Cargo.toml  build.rs
sentinel-gtk/resources/: com.github.Sentinel.desktop  meson.build  resources.xml
sentinel-gtk/resources/gtk/: appmenu.ui  interface.ui  preferences.ui  video_player.ui  widgets.ui
sentinel-gtk/src/: app.rs  headerbar.rs  main.rs  preferences.rs  static_resources.rs  utils.rs
sentinel-gtk/src/views/: mod.rs  trending.rs  video_player.rs
sentinel-gtk/src/widgets/: video.rs  video_wide.rs
src/: main.rs
src/lib/: downloader.rs  mod.rs  utils.rs  youtube.rs
src/ui/: headerbar.rs  mod.rs  preferences.rs  trending.rs  utils.rs  video.rs  video_player.rs
src/ui/views/: trending.rs  video_player.rs
src/ui/widgets/: mod.rs  video.rs  video_player_view.rs  video_wide.rs
