[package]
name = "sentinel"
version = "0.1.0"
authors = ["Kil0meters kil0meters@protonmail.com"]

[dependencies]
clap = "2"
glib = "0.3"
pango = "0.2"
gio = "0.2"
gtk = { version = "0.2", features = ["v3_22"] }
htmlescape = "0.3"

reqwest = "0.8"
regex = "0.2"
select = "0.4"
toml = "0.4"
serde_derive = "1"
serde = "1"
