[package]
name = "sentinel"
version = "0.1.0"
authors = ["Kil0meters kil0meters@protonmail.com"]
description = "A GTK Youtube client which doesn't use the Youtube API."
license = "GPL-3.0"
repository = "https://github.com/kil0meters/sentinel"
keywords = ["sentinel", "gtk", "youtube"]
readme = "README.md"

[dependencies]
clap = "2"
glib = "0.3"
pango = "0.2"
gdk = "0.6"
gio = "0.2"
gtk = { version = "0.2", features = ["v3_22"] }
gdk-pixbuf = "0.2"
htmlescape = "0.3"

reqwest = "0.8"
hyper = "0.11.6"
regex = "0.2"
select = "0.4"
toml = "0.4"
serde_derive = "1"
serde = "1"

clippy = {version = "*", optional = true}

[[bin]]
name = "sentinel"
path = "src/main.rs"
