[package]
name = "sentinel-gtk"
version = "0.1.0"
authors = ["Kil0meters kil0meters@protonmail.com"]
workspace = "../"
build = "build.rs"

[dependencies]
clap = "2"
glib = "0.5"
pango = "0.4"
gdk = "0.8"
gio = "0.4"
gtk = { version = "0.4", features = ["v3_22"] }
gdk-pixbuf = "0.4"
htmlescape = "0.3"

reqwest = "0.8"
hyper = "0.11.6"
regex = "0.2"
select = "0.4"
toml = "0.4"
serde_derive = "1"
serde = "1"

clippy = {version = "*", optional = true}

sentinel-api = { path = "../sentinel-api" }