# subdir('icons')

install_data('com.github.Sentinel.desktop', install_dir : datadir + '/applications')
#install_data('com.github.Sentinel.appdata.xml', install_dir : datadir + '/appdata')
#install_data('com.github.Sentinel.gschema.xml', install_dir: join_paths(datadir, 'glib-2.0', 'schemas'))
meson.add_install_script('../../scripts/compile-gschema.py')
